--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <script
+      type="application/javascript"
+      src="webextension-polyfill.js"
+    ></script>
   </head>
   <body>
     <div id="root"></div>
